--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "nodemailer": "^6.7.5",
+    "overlay-navbar": "^1.2.3",
     "validator": "^13.7.0"
   }
 }
